--- a/Application/templates/list_cars.html
+++ b/Application/templates/list_cars.html
@@ -37,25 +37,25 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('manager_dashboard')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                  Manager Dashboard
+                  Manager Dashboard 
                 </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('list_rents')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                  Rents
+                  Rents 
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('list_cars')}}">
+                <a class="nav-link active" href="{{url_for('list_cars')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-                  Cars
+                  Cars <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('list_customers')}}">
+                <a class="nav-link" href="{{url_for('list_customers')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                  Customers <span class="sr-only">(current)</span>
+                  Customers
                 </a>
               </li>
             </ul>
@@ -111,17 +111,18 @@
           </div>
 
 
-          <h2>All Customers</h2>
+          <h2>Currently Available Cars</h2>
           <div class="table-responsive" id="Table">
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>Customer ID</th>
-                  <th>First Name</th>
-                  <th>Last Name</th>
-                  <th>Date of Birth</th>
-                  <th>License ID</th>
-                  <th>Address ID</th>
+                  <th>Car ID</th>
+                  <th>Brand</th>
+                  <th>Mileage</th>
+                  <th>Date Bought</th>
+                  <th>Price ID</th>
+                  <th>Branch ID</th>
+                  <th>Is Available?</th>
                 </tr>
               </thead>
               <tbody>
@@ -132,33 +133,30 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{url_for('static', filename='bootstrap.js')}}"></script>
 
-    <!-- Icons -->
-
-
+    <script src="#"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
     <script>
-    function loadTable(customer_id, fname, lname, dob, license_id, address)
+    function loadTable(car_id, brand, mileage, date_bought, price_id, branch_id, is_available)
 		{
-        $(customer_id).each(function(i, entry){
+        $(car_id).each(function(i, entry){
           $("#Table").find('tbody')
             .append($('<tr>')
-                .append($('<td>').text(customer_id[i]))
-                .append($('<td>').text(fname[i]))
-                .append($('<td>').text(lname[i]))
-                .append($('<td>').text(dob[i]))
-                .append($('<td>').text(license_id[i]))
-                .append($('<td>').text(address[i]))
+                .append($('<td>').text(car_id[i]))
+                .append($('<td>').text(brand[i]))
+                .append($('<td>').text(mileage[i]))
+                .append($('<td>').text(date_bought[i]))
+                .append($('<td>').text(price_id[i]))
+                .append($('<td>').text(branch_id[i]))
+                .append($('<td>').text(is_available[i]))
     );
       });
 		};
-    loadTable({{customer_id}}, {{fname| tojson | safe}}, {{lname| tojson | safe}}, {{dob| tojson | safe}}, {{license_id| tojson | safe}}, {{address| tojson | safe}})
+    loadTable({{car_id}}, {{brand| tojson | safe}}, {{mileage}}, {{date_bought| tojson | safe}}, {{price_id}}, {{branch_id}}, {{is_available| tojson | safe}})
     </script>
-
+  
 
 </body></html>
