--- a/Application/templates/list_customers.html
+++ b/Application/templates/list_customers.html
@@ -41,9 +41,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('list_rents')}}">
+                <a class="nav-link" href="{{url_for('list_rents')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                  Rents <span class="sr-only">(current)</span>
+                  Rents
                 </a>
               </li>
               <li class="nav-item">
@@ -53,9 +53,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('list_customers')}}">
+                <a class="nav-link active" href="{{url_for('list_customers')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-users"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path></svg>
-                  Customers
+                  Customers <span class="sr-only">(current)</span>
                 </a>
               </li>
             </ul>
@@ -111,137 +111,20 @@
           </div>
 
 
-          <h2>Rents</h2>
-          <div class="table-responsive">
+          <h2>All Customers</h2>
+          <div class="table-responsive" id="Table">
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
-                  <th>Rent ID</th>
-                  <th>Car ID</th>
-                  <th>Duration</th>
-                  <th>Free Kilometers</th>
                   <th>Customer ID</th>
-                  <th>Employee ID</th>
-                  <th>Is Returned?</th>
-                  <th>Date Rented</th>
-                  <th>Date Returned</th>
-                  <th>Employee ID returned</th>
-                  <th>Mileage returned</th>
+                  <th>First Name</th>
+                  <th>Last Name</th>
+                  <th>Date of Birth</th>
+                  <th>License ID</th>
+                  <th>Address ID</th>
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <td>1,001</td>
-                  <td>Lorem</td>
-                  <td>ipsum</td>
-                  <td>dolor</td>
-                  <td>sit</td>
-                </tr>
-                <tr>
-                  <td>1,002</td>
-                  <td>amet</td>
-                  <td>consectetur</td>
-                  <td>adipiscing</td>
-                  <td>elit</td>
-                </tr>
-                <tr>
-                  <td>1,003</td>
-                  <td>Integer</td>
-                  <td>nec</td>
-                  <td>odio</td>
-                  <td>Praesent</td>
-                </tr>
-                <tr>
-                  <td>1,003</td>
-                  <td>libero</td>
-                  <td>Sed</td>
-                  <td>cursus</td>
-                  <td>ante</td>
-                </tr>
-                <tr>
-                  <td>1,004</td>
-                  <td>dapibus</td>
-                  <td>diam</td>
-                  <td>Sed</td>
-                  <td>nisi</td>
-                </tr>
-                <tr>
-                  <td>1,005</td>
-                  <td>Nulla</td>
-                  <td>quis</td>
-                  <td>sem</td>
-                  <td>at</td>
-                </tr>
-                <tr>
-                  <td>1,006</td>
-                  <td>nibh</td>
-                  <td>elementum</td>
-                  <td>imperdiet</td>
-                  <td>Duis</td>
-                </tr>
-                <tr>
-                  <td>1,007</td>
-                  <td>sagittis</td>
-                  <td>ipsum</td>
-                  <td>Praesent</td>
-                  <td>mauris</td>
-                </tr>
-                <tr>
-                  <td>1,008</td>
-                  <td>Fusce</td>
-                  <td>nec</td>
-                  <td>tellus</td>
-                  <td>sed</td>
-                </tr>
-                <tr>
-                  <td>1,009</td>
-                  <td>augue</td>
-                  <td>semper</td>
-                  <td>porta</td>
-                  <td>Mauris</td>
-                </tr>
-                <tr>
-                  <td>1,010</td>
-                  <td>massa</td>
-                  <td>Vestibulum</td>
-                  <td>lacinia</td>
-                  <td>arcu</td>
-                </tr>
-                <tr>
-                  <td>1,011</td>
-                  <td>eget</td>
-                  <td>nulla</td>
-                  <td>Class</td>
-                  <td>aptent</td>
-                </tr>
-                <tr>
-                  <td>1,012</td>
-                  <td>taciti</td>
-                  <td>sociosqu</td>
-                  <td>ad</td>
-                  <td>litora</td>
-                </tr>
-                <tr>
-                  <td>1,013</td>
-                  <td>torquent</td>
-                  <td>per</td>
-                  <td>conubia</td>
-                  <td>nostra</td>
-                </tr>
-                <tr>
-                  <td>1,014</td>
-                  <td>per</td>
-                  <td>inceptos</td>
-                  <td>himenaeos</td>
-                  <td>Curabitur</td>
-                </tr>
-                <tr>
-                  <td>1,015</td>
-                  <td>sodales</td>
-                  <td>ligula</td>
-                  <td>in</td>
-                  <td>libero</td>
-                </tr>
               </tbody>
             </table>
           </div>
@@ -249,48 +132,29 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{url_for('static', filename='bootstrap.js')}}"></script>
 
-    <!-- Icons -->
-    <script src="#"></script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
     <script>
-      feather.replace()
+    function loadTable(customer_id, fname, lname, dob, license_id, address)
+		{
+        $(customer_id).each(function(i, entry){
+          $("#Table").find('tbody')
+            .append($('<tr>')
+                .append($('<td>').text(customer_id[i]))
+                .append($('<td>').text(fname[i]))
+                .append($('<td>').text(lname[i]))
+                .append($('<td>').text(dob[i]))
+                .append($('<td>').text(license_id[i]))
+                .append($('<td>').text(address[i]))
+    );
+      });
+		};
+    loadTable({{customer_id}}, {{fname| tojson | safe}}, {{lname| tojson | safe}}, {{dob| tojson | safe}}, {{license_id| tojson | safe}}, {{address| tojson | safe}})
     </script>
 
-    <!-- Graphs -->
-    <script src="#"></script>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
-          }
-        }
-      });
-    </script>
-  
 
 </body></html>
