--- a/Application/templates/list_rents.html
+++ b/Application/templates/list_rents.html
@@ -37,19 +37,19 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('manager_dashboard')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                  Manager Dashboard 
+                  Manager Dashboard
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('list_rents')}}">
+                <a class="nav-link active" href="{{url_for('list_rents')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
-                  Rents 
+                  Rents <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('list_cars')}}">
+                <a class="nav-link" href="{{url_for('list_cars')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
-                  Cars <span class="sr-only">(current)</span>
+                  Cars
                 </a>
               </li>
               <li class="nav-item">
@@ -111,21 +111,137 @@
           </div>
 
 
-          <h2>Currently Available Cars</h2>
-          <div class="table-responsive" id="Table">
+          <h2>Rents</h2>
+          <div class="table-responsive">
             <table class="table table-striped table-sm">
               <thead>
                 <tr>
+                  <th>Rent ID</th>
                   <th>Car ID</th>
-                  <th>Brand</th>
-                  <th>Mileage</th>
-                  <th>Date Bought</th>
-                  <th>Price ID</th>
-                  <th>Branch ID</th>
-                  <th>Is Available?</th>
+                  <th>Duration</th>
+                  <th>Free Kilometers</th>
+                  <th>Customer ID</th>
+                  <th>Employee ID</th>
+                  <th>Is Returned?</th>
+                  <th>Date Rented</th>
+                  <th>Date Returned</th>
+                  <th>Employee ID returned</th>
+                  <th>Mileage returned</th>
                 </tr>
               </thead>
               <tbody>
+                <tr>
+                  <td>1,001</td>
+                  <td>Lorem</td>
+                  <td>ipsum</td>
+                  <td>dolor</td>
+                  <td>sit</td>
+                </tr>
+                <tr>
+                  <td>1,002</td>
+                  <td>amet</td>
+                  <td>consectetur</td>
+                  <td>adipiscing</td>
+                  <td>elit</td>
+                </tr>
+                <tr>
+                  <td>1,003</td>
+                  <td>Integer</td>
+                  <td>nec</td>
+                  <td>odio</td>
+                  <td>Praesent</td>
+                </tr>
+                <tr>
+                  <td>1,003</td>
+                  <td>libero</td>
+                  <td>Sed</td>
+                  <td>cursus</td>
+                  <td>ante</td>
+                </tr>
+                <tr>
+                  <td>1,004</td>
+                  <td>dapibus</td>
+                  <td>diam</td>
+                  <td>Sed</td>
+                  <td>nisi</td>
+                </tr>
+                <tr>
+                  <td>1,005</td>
+                  <td>Nulla</td>
+                  <td>quis</td>
+                  <td>sem</td>
+                  <td>at</td>
+                </tr>
+                <tr>
+                  <td>1,006</td>
+                  <td>nibh</td>
+                  <td>elementum</td>
+                  <td>imperdiet</td>
+                  <td>Duis</td>
+                </tr>
+                <tr>
+                  <td>1,007</td>
+                  <td>sagittis</td>
+                  <td>ipsum</td>
+                  <td>Praesent</td>
+                  <td>mauris</td>
+                </tr>
+                <tr>
+                  <td>1,008</td>
+                  <td>Fusce</td>
+                  <td>nec</td>
+                  <td>tellus</td>
+                  <td>sed</td>
+                </tr>
+                <tr>
+                  <td>1,009</td>
+                  <td>augue</td>
+                  <td>semper</td>
+                  <td>porta</td>
+                  <td>Mauris</td>
+                </tr>
+                <tr>
+                  <td>1,010</td>
+                  <td>massa</td>
+                  <td>Vestibulum</td>
+                  <td>lacinia</td>
+                  <td>arcu</td>
+                </tr>
+                <tr>
+                  <td>1,011</td>
+                  <td>eget</td>
+                  <td>nulla</td>
+                  <td>Class</td>
+                  <td>aptent</td>
+                </tr>
+                <tr>
+                  <td>1,012</td>
+                  <td>taciti</td>
+                  <td>sociosqu</td>
+                  <td>ad</td>
+                  <td>litora</td>
+                </tr>
+                <tr>
+                  <td>1,013</td>
+                  <td>torquent</td>
+                  <td>per</td>
+                  <td>conubia</td>
+                  <td>nostra</td>
+                </tr>
+                <tr>
+                  <td>1,014</td>
+                  <td>per</td>
+                  <td>inceptos</td>
+                  <td>himenaeos</td>
+                  <td>Curabitur</td>
+                </tr>
+                <tr>
+                  <td>1,015</td>
+                  <td>sodales</td>
+                  <td>ligula</td>
+                  <td>in</td>
+                  <td>libero</td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -133,37 +249,10 @@
       </div>
     </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
+
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{url_for('static', filename='bootstrap.js')}}"></script>
 
-    <!-- Icons -->
-    <script src="#"></script>
-
-
-    <!-- Graphs -->
-    <script src="#"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="{{url_for('static', filename='jquery.js') }}">\x3C/script>')</script>
-    <script>
-    function loadTable(car_id, brand, mileage, date_bought, price_id, branch_id, is_available)
-		{
-        $(car_id).each(function(i, entry){
-          $("#Table").find('tbody')
-            .append($('<tr>')
-                .append($('<td>').text(car_id[i]))
-                .append($('<td>').text(brand[i]))
-                .append($('<td>').text(mileage[i]))
-                .append($('<td>').text(date_bought[i]))
-                .append($('<td>').text(price_id[i]))
-                .append($('<td>').text(branch_id[i]))
-                .append($('<td>').text(is_available[i]))
-    );
-      });
-		};
-    loadTable({{car_id}}, {{brand| tojson | safe}}, {{mileage}}, {{date_bought| tojson | safe}}, {{price_id}}, {{branch_id}}, {{is_available| tojson | safe}})
-    </script>
   
 
 </body></html>
