--- a/Application/templates/new_rent.html
+++ b/Application/templates/new_rent.html
@@ -35,9 +35,9 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link active" href="{{url_for('manager_dashboard')}}">
+                <a class="nav-link" href="{{url_for('manager_dashboard')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                  Manager Dashboard <span class="sr-only">(current)</span>
+                  Manager Dashboard
                 </a>
               </li>
               <li class="nav-item">
@@ -74,9 +74,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('new_rent')}}">
+                <a class="nav-link active" href="{{url_for('new_rent')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                  New Rent
+                  New Rent <span class="sr-only">(current)</span>
                 </a>
               </li>
               <li class="nav-item">
@@ -96,54 +96,98 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"><div style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
-          <img src="{{url_for('static',filename='logo_v2.png')}}"/>
-
-        </main>
+          <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+            <h1 class="h2"></h1>
+            <div class="btn-toolbar mb-2 mb-md-0">
+              <div class="btn-group mr-2">
+                <button class="btn btn-sm btn-outline-secondary">Share</button>
+                <button class="btn btn-sm btn-outline-secondary">Export</button>
+              </div>
+              <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
+                This week
+              </button>
+            </div>
+          </div>
+      <div class="container-xl">
+        <div class="form-group">
+          <label for="example-text-input" class="col-2 col-form-label">Rent ID</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-search-input" class="col-2 col-form-label">Car ID</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-email-input" class="col-2 col-form-label">Duration</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-url-input" class="col-2 col-form-label">Free Kilometers</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-tel-input" class="col-2 col-form-label">Customer ID</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-password-input" class="col-2 col-form-label">Employee ID</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-password-input" class="col-2 col-form-label">Is returned?</label>
+          <div class="col-10">
+            <select class="form-control" type="number">`
+              <option value="True">Is Returned</option>
+              <option value="False">Is not Returned</option>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-password-input" class="col-2 col-form-label">Date Rented</label>
+          <div class="col-10">
+            <input class="form-control" type="date">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-password-input" class="col-2 col-form-label">Date Returned</label>
+          <div class="col-10">
+            <input class="form-control" type="date">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-password-input" class="col-2 col-form-label">Employee ID returned</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="example-password-input" class="col-2 col-form-label">Mileage returned</label>
+          <div class="col-10">
+            <input class="form-control" type="number">
+          </div>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+        <br>
+      </main>
       </div>
     </div>
+    </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="{{url_for('static', filename='bootstrap.js')}}"></script>
 
-    <!-- Icons -->
-    <script src="#"></script>
-    <script>
-      feather.replace()
-    </script>
-
-    <!-- Graphs -->
-    <script src="#"></script>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
-          }
-        }
-      });
-    </script>
-  
 
 </body></html>
