--- a/Application/templates/new_rent.html
+++ b/Application/templates/new_rent.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="{{url_for('static', filename='icon.ico')}}">
 
-    <title>CarRent</title>
+    <title>Car2Rent</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.1/examples/dashboard/">
 
@@ -21,8 +21,7 @@
 
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{{url_for('index')}}">CarRent</a>
-      <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{{url_for('manager_dashboard')}}">Car2Rent</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
         </li>
@@ -61,18 +60,12 @@
             </ul>
 
             <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-              <span>CRUD</span>
+              <span>Actions</span>
               <a class="d-flex align-items-center text-muted" href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle"><circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>
               </a>
             </h6>
             <ul class="nav flex-column mb-2">
-              <li class="nav-item">
-                <a class="nav-link" href="{{url_for('new_customer')}}">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                  New Customer
-                </a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link active" href="{{url_for('new_rent')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
@@ -80,15 +73,9 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{url_for('return_car')}}">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                  Return Car
-                </a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="{{url_for('update_customer_rent')}}">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file-text"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><polyline points="10 9 9 9 8 9"></polyline></svg>
-                  Update Customer Rent
+                  Manage Rents
                 </a>
               </li>
             </ul>
@@ -97,89 +84,24 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4"><div style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;" class="chartjs-size-monitor"><div class="chartjs-size-monitor-expand" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div></div><div class="chartjs-size-monitor-shrink" style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;"><div style="position:absolute;width:200%;height:200%;left:0; top:0"></div></div></div>
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2"></h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <button class="btn btn-sm btn-outline-secondary">Share</button>
-                <button class="btn btn-sm btn-outline-secondary">Export</button>
-              </div>
-              <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                This week
-              </button>
-            </div>
+            <H1>Rent a new car</H1>
+
           </div>
       <div class="container-xl">
-        <div class="form-group">
-          <label for="example-text-input" class="col-2 col-form-label">Rent ID</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
+        <form action="/add_rent" method="post">
+          <div style="width:50%;float:left;">
+            <input type="number" name="carid" placeholder="car_id">
+            <br><br>
+            <input type="number" name="duration" placeholder="duration">
+            <br><br>
+            <input type="number" name="customer" placeholder="customer_id">
+            <br><br>
+            <input type="number" name="employee" placeholder="employee_id">
+            <br><br>
+            <input type="submit" name="" value="create rent" class="btn btn-outline-dark">
           </div>
-        </div>
-        <div class="form-group">
-          <label for="example-search-input" class="col-2 col-form-label">Car ID</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-email-input" class="col-2 col-form-label">Duration</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-url-input" class="col-2 col-form-label">Free Kilometers</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-tel-input" class="col-2 col-form-label">Customer ID</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-password-input" class="col-2 col-form-label">Employee ID</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-password-input" class="col-2 col-form-label">Is returned?</label>
-          <div class="col-10">
-            <select class="form-control" type="number">`
-              <option value="True">Is Returned</option>
-              <option value="False">Is not Returned</option>
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-password-input" class="col-2 col-form-label">Date Rented</label>
-          <div class="col-10">
-            <input class="form-control" type="date">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-password-input" class="col-2 col-form-label">Date Returned</label>
-          <div class="col-10">
-            <input class="form-control" type="date">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-password-input" class="col-2 col-form-label">Employee ID returned</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="example-password-input" class="col-2 col-form-label">Mileage returned</label>
-          <div class="col-10">
-            <input class="form-control" type="number">
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
+          <br><br>
+      </form>
         <br>
       </main>
       </div>
